style.css
@import url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');

*{
  box-sizing: border-box;
}


body{
  font-family: "Marcellus", serif;
  background-color: rgba(235, 208, 224, 0.93);
  color: rgba(43, 41, 40, 0.853);
   display: flex;
  justify-content: space-between; 
  min-width: 800px;
  background-image: linear-gradient(rgb(193, 224, 249), rgb(245, 244, 193));
  /* background-image: linear-gradient(to top, rgba(147, 147, 147, 0.239), rgb(255, 165, 243)); */
}
    /* width: 100%; */
  

.container{
    display: flex;
    flex-direction: column;
    width: 50%;
    align-items: center;
    justify-content: center;
    /* justify-items: center; */
    /* position:relative; */
    min-height: 100vh;
    height: auto;
    margin: 0 auto;
}
  
  
header{
    /* background-color: rgba(254, 254, 254, 0.551); */
    display:flex;
    /* justify-content: center; */
    margin: 0 auto;
  }
  
  .header{
    display:flex;
    justify-content: center;
    width: 100%; 
  }
  
.header p{
  font-size: 1.5rem;
}

.myImage{
    display: flex;
    margin-right: 5rem;
    align-items: center;
    /* justify-content: center; */
}

.head-myInfo{
    /* background-color: rgb(252, 177, 177); */
    margin-left: 1rem;
    width: auto;
    overflow-wrap: break-word; 
  }
  
  main{
    /* background-color: rgba(245, 149, 149, 0.5); */
    margin-left: 3rem;
    width: auto;
    overflow-wrap: break-word;
  }
  
  .main-section{
    display: flex;
    justify-content: center;
    /* height: 100vh; */
    margin-top: 1rem;
    overflow-wrap: break-word;
    margin-bottom: 1rem; /* Добавляем отступ снизу */
    /* background-color: red; */
  }
  
  aside{
    /* background-color: rgba(99, 245, 253, 0.5); */
    width: 20rem;
    margin-left: 1rem;
    box-sizing: border-box;
    position:relative;
  }
  
  aside::after {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    height: 40rem;
    width: 5px; 
    background-color: white; 
  }
  
  

  footer{
    background-color: rgba(78, 95, 96, 0.5);
    margin-top: auto;
  }
  
  h1{
    font-size: 3.5rem;
    color: rgba(10, 4, 23, 0.893);
  }

  .header-h1{
    font-weight: bold;
    margin-bottom: 3rem;
  }

  h2{
    font-weight: bold;
    font-size: 1.8rem;
  }

  li{
    font-size: 1.3rem;
  }

pre{
  background-color: rgba(108, 96, 96, 0.254);
  display:inline-block;
  justify-content: center;
  border-radius: 0.3rem;
  font-size: 1.3rem;
  border: none;
  border-style: none;
  padding: 30px;
}
  
@media (width < 50rem) {

  body{
    min-width: 800px;
    width: 100%;
    margin: 0 auto;
  }

  .myImage{
    display: flex;
    text-align: center;
  }

  .head-myInfo{
    overflow-wrap: break-word;
    width: 100%;
  }

  .container{
    justify-content: center;
    display:block;
    margin: 0 auto;

  }

  .header{
    width: 100%;
    height: auto;
    /* display: block; */
    margin: 0 auto;
  }

  .main-section{
    display:block;
    height: auto;
    justify-content:flex-start;
    margin: 0 auto;
  }  

  
  aside{
    width: 100%;
    margin-top: 1rem;
    margin: 0 auto;
  }

  h1{
    font-size: 3rem;
  }


  aside::after{
    display:none;
  }

  /* .skill-list{
    box-sizing: border-box;
  } */

  aside::before {
    content: '';
    position:absolute;
    bottom: -20px;
    left: -20px;
    width: 100%; 
    height: 5px; 
    background-color: rgba(255, 255, 255, 0.712);
  }

  /* header::after{
    content: '';
    position: absolute;
    bottom: 0px;
    top: 39rem;
    left: 0px;
    width: 50%; 
    height: 5px; 
    background-color: rgba(255, 255, 255, 0.712);
  } */
  }

  
  
  
  
  

